<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2021  Drone3D-Team
  ~ The license can be found in LICENSE at root of the repository
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activityStyle"
    tools:context=".ui.weather.WeatherInfoActivity">

    <TextView
        android:id="@+id/nonExistentMission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/non_existent_mission"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <TextView
        android:id="@+id/infoWeatherDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_weather_description"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.164" />

    <TextView
        android:id="@+id/infoTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_temperature"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <TextView
        android:id="@+id/infoHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_humidity"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.363" />

    <TextView
        android:id="@+id/infoWindSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_wind_speed"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466" />

    <TextView
        android:id="@+id/infoVisibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_visibility"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.569" />

    <TextView
        android:id="@+id/lastUpdated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updated_on"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.67" />

</androidx.constraintlayout.widget.ConstraintLayout>