<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2021  Drone3D-Team
  ~ The license can be found in LICENSE at root of the repository
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.map.MissionInProgressActivity">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/map_in_mission_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-72dp"
        tools:layout_editor_absoluteY="-71dp" >

    </com.mapbox.mapboxsdk.maps.MapView>

    <SurfaceView
        android:id="@+id/camera_mission_view"
        android:layout_width="204dp"
        android:layout_height="112dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.974" />

    <TextView
        android:id="@+id/warningBadWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="14sp"
        android:text="@string/warning_bad_weather"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.645" />

    <Button
        android:id="@+id/backToHomeButton"
        android:layout_width="112dp"
        android:layout_height="58dp"
        android:onClick="backToHome"
        android:text="@string/back_to_home_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/backToUserButton"
        android:layout_width="112dp"
        android:layout_height="58dp"
        android:onClick="backToUser"
        android:text="@string/back_to_user_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891" />

</androidx.constraintlayout.widget.ConstraintLayout>