<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/pseudoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/pseudo_text"
        android:labelFor="@id/pseudoEditText"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/passwordText"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pseudoEditText"
        android:layout_width="233dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@id/pseudoText"
        app:layout_constraintEnd_toEndOf="@id/passwordEditText"
        app:layout_constraintStart_toStartOf="@id/passwordEditText"
        app:layout_constraintTop_toTopOf="@id/pseudoText" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/email_text"
        android:labelFor="@id/emailEditText"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/passwordText"
        app:layout_constraintTop_toBottomOf="@id/pseudoText" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="233dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textWebEmailAddress"
        app:layout_constraintBottom_toBottomOf="@id/emailText"
        app:layout_constraintEnd_toEndOf="@id/passwordEditText"
        app:layout_constraintStart_toStartOf="@id/passwordEditText"
        app:layout_constraintTop_toTopOf="@id/emailText" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:text="@string/password_text"
        android:labelFor="@id/passwordEditText"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/passwordEditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailText" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="233dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@id/passwordText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/passwordText"
        app:layout_constraintTop_toTopOf="@id/passwordText" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:text="@string/register_button_text"
        app:layout_constraintBottom_toBottomOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/loginButton"
        app:layout_constraintTop_toTopOf="@id/loginButton" />

    <TextView
        android:id="@+id/infoText"
        android:layout_width="275dp"
        android:layout_height="120dp"
        android:gravity="center"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginBottom="100dp"
        android:text="@string/login_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/registerButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="@id/infoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/infoText" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/back_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>